[gd_scene load_steps=40 format=2]

[ext_resource path="res://basquete/basquete_main.gd" type="Script" id=1]
[ext_resource path="res://basquete/pixil-frame-0 (7).png" type="Texture" id=2]
[ext_resource path="res://MiniMap/120px-Ponto_Vermelho (2).png" type="Texture" id=3]
[ext_resource path="res://player_basquete.gd" type="Script" id=4]
[ext_resource path="res://basquete/download-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://basquete/pixil-frame-0 (8) (1).png" type="Texture" id=6]
[ext_resource path="res://MinigameSkate/assets/pedra.png" type="Texture" id=7]
[ext_resource path="res://button_assets/Pup_Up_Exit.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 947.989, 24.3528 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.3147, 611.352 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.3746, 37.3804 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0.43103, -12.8408 )
b = Vector2( 25.1185, 41.7943 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 29.7178, -52.0339 )
b = Vector2( 47.457, -112.452 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.0156, 853.992 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=14]
size = 58
font_data = SubResource( 13 )

[sub_resource type="PhysicsMaterial" id=15]
bounce = 0.71

[sub_resource type="CircleShape2D" id=16]
radius = 12.599

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 15.4303, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 20.1497, 60.4389 )

[sub_resource type="LargeTexture" id=20]

[sub_resource type="DynamicFontData" id=21]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=22]
size = 27
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=24]
size = 27
font_data = SubResource( 23 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=26]
size = 28
font_data = SubResource( 25 )

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.0308762, 342.0 ],
"_edit_vertical_guides_": [ -114.825, 816.496, -181.0, 839.0 ]
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 507.532, 596.133 )
scale = Vector2( 0.55, 0.55 )

[node name="pixil-frame-0 (7)" type="Sprite" parent="StaticBody2D"]
position = Vector2( -279.668, -511.644 )
scale = Vector2( 1.81818, 1.81818 )
texture = ExtResource( 2 )

[node name="ground" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -142.917, -355.964 )
shape = SubResource( 1 )

[node name="wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 787.431, -777.209 )
shape = SubResource( 2 )

[node name="cesta" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 623.823, -883.896 )
rotation = 0.127409
shape = SubResource( 3 )

[node name="rede" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 493.578, -829.333 )
shape = SubResource( 4 )

[node name="rede2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 539.033, -731.151 )
shape = SubResource( 5 )

[node name="wall2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -926.541, -436.74 )
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]

[node name="angleslide" type="HSlider" parent="Node2D"]
margin_left = 100.0
margin_top = 41.0
margin_right = 242.0
margin_bottom = 91.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forceslide" type="HSlider" parent="Node2D"]
margin_left = 102.0
margin_top = 74.0
margin_right = 243.0
margin_bottom = 116.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
max_value = 500.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoJogar" type="Button" parent="."]
margin_left = 88.0
margin_top = 435.0
margin_right = 227.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 8 )
text = "Arremessar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_play_again" type="Button" parent="."]
margin_left = 485.732
margin_top = 7.0
margin_right = 635.732
margin_bottom = 57.0
custom_fonts/font = SubResource( 10 )
text = "Jogar novamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_get_out" type="Button" parent="."]
margin_left = 661.0
margin_top = 7.0
margin_right = 811.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 12 )
text = "Voltar ao mapa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pontos" type="Label" parent="."]
margin_left = -283.0
margin_right = 453.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 14 )
text = "Pontos:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pontuacao" type="Label" parent="."]
margin_left = -151.512
margin_top = 2.466
margin_right = 560.488
margin_bottom = 117.466
custom_fonts/font = SubResource( 14 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 378, 322 )
script = ExtResource( 4 )

[node name="bodyball" type="RigidBody2D" parent="KinematicBody2D"]
position = Vector2( 38, -54 )
physics_material_override = SubResource( 15 )
sleeping = true
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="bola" type="Sprite" parent="KinematicBody2D/bodyball"]
position = Vector2( -0.246552, 0.0579224 )
scale = Vector2( 0.287888, 0.292878 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/bodyball"]
position = Vector2( -0.163651, -0.157623 )
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 15, 26 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/jogando = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 40, -29 )
shape = SubResource( 18 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1, 2 )
shape = SubResource( 19 )

[node name="linha" type="Line2D" parent="."]
width = 3.0
default_color = Color( 0.0470588, 0.0627451, 0.137255, 1 )
texture = SubResource( 20 )
texture_mode = 9371648

[node name="angulo" type="Label" parent="."]
margin_left = 10.0
margin_top = 50.454
margin_right = 122.0
margin_bottom = 82.454
custom_fonts/font = SubResource( 22 )
text = "Ângulo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="força" type="Label" parent="."]
margin_left = 10.0
margin_top = 77.0
margin_right = 121.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 24 )
text = "Força:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 649.697
margin_top = 379.051
margin_right = 834.697
margin_bottom = 502.051
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 95.159, 20 )
scale = Vector2( 0.31, 0.2 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Popup"]
margin_left = -103.0
margin_top = -80.0
margin_right = 317.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 26 )
text = "Essa é a nossa quadra de basquete! Seu objetivo aqui é combinar a direção e a força certas para acertar a cesta e acumular pontos! Como jogar: Clique em Arremessar quando achar que tem a combinação exata de ângulo e força!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Button" parent="Popup"]
margin_left = 290.0
margin_top = -120.0
margin_right = 686.0
margin_bottom = 270.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 28 )
custom_styles/focus = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
icon = ExtResource( 8 )

[connection signal="pressed" from="botaoJogar" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="button_play_again" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="button_get_out" to="." method="_on_button_get_out_pressed"]
